continued file swaps

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -16,7 +16,7 @@
             <ul class = "nav">
                 <li id ="add-device"><a id="#">Add a Device</a></li>
                 <li id="add-data"><a id="#">Add Data Sources</a></li>
-                <li id ="write-data"><a href="#">Write Data/a></li>
+                <li id ="write-data"><a href="#">Write Data</a></li>
                 <li id ="create-script"><a href="#">Create a script</a></li>
             </ul>
             <div>&nbsp;</div>
