Debugging click behavior

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -14,8 +14,8 @@
     <div class="main row">
         <div class="mainSub sidebar col-md-2">
             <ul class = "nav">
-                <li id ="add-device"><a id="#">Add a Device</a></li>
-                <li id="add-data"><a id="#">Add Data Sources</a></li>
+                <li id ="create-device"><a id="#">Add a Device</a></li>
+                <li id ="create-datasource"><a id="#">Add Data Sources</a></li>
                 <li id ="write-data"><a href="#">Write Data</a></li>
                 <li id ="create-script"><a href="#">Create a script</a></li>
             </ul>
