probably breaking session additions, form

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -4,12 +4,12 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/stylesheet.css" rel="stylesheet" />
-    <title>Michelle C. Funk | Resume</title>
+    <title>Exosite Device Simulator</title>
 </head>
 <body>
 <div class="container">
-    <div class="header row">
-        <h1>Portals Device Simulator</h1>
+    <div class="header row" id="home">
+        <h1>Exosite Device Simulator</h1>
     </div>
     <div class="main row">
         <div class="mainSub sidebar col-md-2">
