--- a/server/public/assets/templates/start.html
+++ b/server/public/assets/templates/start.html
@@ -3,9 +3,9 @@ In order to connect with your device, please choose how you to connect:
 <div id="username"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div>
 <form>
-  <input type="text" name="url" placeholder="https://portals.exosite.com" text="https://"></input>
-  <input type="text" name="username" placeholder="youremail@domain.com"></input>
-  <input type="password" name="password"></input>
+  <div class="url"><input label="url" type="text" name="url" placeholder="https://portals.exosite.com" text="https://"></input></div>
+  <div class="username"><input label="username" type="text" name="username" placeholder="youremail@domain.com"></input></div>
+  <div class="password"><input label="password" type="password" name="password"></input></div>
 </form>
 <!-- <div id="cik"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div> -->
