--- a/server/public/assets/templates/start.html
+++ b/server/public/assets/templates/start.html
@@ -3,10 +3,18 @@
 In order to connect with your device, please choose how you to connect:
 <div id="username"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div>
+<h3>Authenticate with your username:</h3>
+<form id="uauthForm">
+  <div class="url">Domain URL: <input label="url" type="text" name="url" placeholder="https://portals.exosite.com" text="https://"></input></div>
+  <div class="username">Username: <input label="username" type="text" name="username" placeholder="youremail@domain.com"></input></div>
+  <div class="password">Password: <input label="password" type="password" name="password"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitUauth">Submit User Credentials</a>
+    <a class="btn btn-danger btn-sm" id="clearUauth">Clear User Credentials</a></div>
+</form id="cikForm">
+<h3>Authenticate with your CIK:</h3>
 <form>
-  <div class="url"><input label="url" type="text" name="url" placeholder="https://portals.exosite.com" text="https://"></input></div>
-  <div class="username"><input label="username" type="text" name="username" placeholder="youremail@domain.com"></input></div>
-  <div class="password"><input label="password" type="password" name="password"></input></div>
+  <div class="cik">CIK: <input label="cik" type="text" name="cik"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
+    <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a></div>
 </form>
 <!-- <div id="cik"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div> -->
+<script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script>
