--- a/server/public/assets/templates/start.html
+++ b/server/public/assets/templates/start.html
@@ -12,7 +12,7 @@ In order to connect with your device, please choose how you to connect:
 </form id="cikForm">
 <h3>Authenticate with your CIK:</h3>
 <form>
-  <div class="cik">CIK: <input label="cik" type="text" name="cik"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
+  <div class="cik">CIK: <input label="cik" type="text" id="cikInput" name="cik"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
     <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a></div>
 </form>
 <!-- <div id="cik"><h3>Connect to the Portals API (username and password)</h3>
