not quite working on portal info retrieval

--- a/server/public/assets/templates/start.html
+++ b/server/public/assets/templates/start.html
@@ -13,7 +13,8 @@ In order to connect with your device, please choose how you to connect:
 <h3>Authenticate with your CIK:</h3>
 <form>
   <div class="cik">CIK: <input label="cik" type="text" id="cikInput" name="cik"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
-    <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a></div>
+    <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a></div
+    <div id="cikStatus"></div>
 </form>
 <!-- <div id="cik"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div> -->
