Some CIK validation/name display working ... error handling not

--- a/server/public/assets/templates/start.html
+++ b/server/public/assets/templates/start.html
@@ -1,7 +1,7 @@
 <h1>Start here!</h1>
 
 In order to connect with your device, please choose how you to connect:
-<div id="username"><h3>Connect to the Portals API (username and password)</h3>
+<!-- <div id="username"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div>
 <h3>Authenticate with your username:</h3>
 <form id="uauthForm">
@@ -9,12 +9,12 @@ In order to connect with your device, please choose how you to connect:
   <div class="username">Username: <input label="username" type="text" name="username" placeholder="youremail@domain.com"></input></div>
   <div class="password">Password: <input label="password" type="password" name="password"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitUauth">Submit User Credentials</a>
     <a class="btn btn-danger btn-sm" id="clearUauth">Clear User Credentials</a></div>
-</form id="cikForm">
+</form id="cikForm">-->
 <h3>Authenticate with your CIK:</h3>
 <form>
-  <div class="cik">CIK: <input label="cik" type="text" id="cikInput" name="cik"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
-    <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a></div
-    <div id="cikStatus"></div>
+  <div class="cik">CIK: <input label="cik" type="text" id="cikInput" name="cik" size="43"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
+    <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a>
+    <p id="cikStatus"></p></div>
 </form>
 <!-- <div id="cik"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div> -->
