Correct behavior for incorrect CIK

--- a/server/public/assets/templates/start.html
+++ b/server/public/assets/templates/start.html
@@ -1,6 +1,7 @@
-<h1>Start here!</h1>
+<h1>Authentication</h1>
 
-In order to connect with your device, please choose how you to connect:
+<p>In order to connect with your device, please provide your portal CIK.<br>
+<small><em>Can't find your CIK? <a href="https://support.exosite.com/hc/en-us/articles/200095518-How-do-I-find-my-CIK-Client-Interface-Key-" target="_blank">Read this.</a></em></small><p>
 <!-- <div id="username"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div>
 <h3>Authenticate with your username:</h3>
@@ -10,11 +11,11 @@ In order to connect with your device, please choose how you to connect:
   <div class="password">Password: <input label="password" type="password" name="password"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitUauth">Submit User Credentials</a>
     <a class="btn btn-danger btn-sm" id="clearUauth">Clear User Credentials</a></div>
 </form id="cikForm">-->
-<h3>Authenticate with your CIK:</h3>
+<h3>Enter your CIK:</h3>
 <form>
   <div class="cik">CIK: <input label="cik" type="text" id="cikInput" name="cik" size="43"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
     <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a>
-    <p id="cikStatus"></p></div>
+    <p id="cikStatus"><em>Enter a valid CIK to begin.</em></p></div>
 </form>
 <!-- <div id="cik"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div> -->
