--- a/server/public/assets/templates/start.html
+++ b/server/public/assets/templates/start.html
@@ -12,7 +12,7 @@
     <a class="btn btn-danger btn-sm" id="clearUauth">Clear User Credentials</a></div>
 </form id="cikForm">-->
 <h3>Enter your CIK:</h3>
-<form>
+<form action="none">
   <div class="cik">CIK: <input label="cik" type="text" id="cikInput" name="cik" size="43"></input>&nbsp;<a class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
     <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a>
     <p id="cikStatus"><em>Enter a valid CIK to begin.</em></p></div>
