--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html ng-app="app">
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Exosite Device Simulator</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/stylesheet.css" rel="stylesheet" />
-    <title>Exosite Device Simulator</title>
 </head>
 <body>
 <div class="container">
@@ -15,10 +16,10 @@
         <div class="mainSub sidebar col-md-2">
             <ul class = "nav">
                 <li id ="start-here"><a id="#">Authentication</a></li>
-                <li id ="create-device"><a id="#">Add a Device</a></li>
-                <li id ="create-datasource"><a id="#">Add Data Sources</a></li>
-                <li id ="write-data"><a href="#">Write Data</a></li>
-                <li id ="create-script"><a href="#">Create a script</a></li>
+                <li id ="devices"><a id="#">Devices & Data</a></li>
+                <!-- <li id ="create-datasource"><a id="#">Add Data Sources</a></li> -->
+                <!-- <li id ="write-data"><a href="#">Write Data</a></li> -->
+                <li id ="create-script"><a href="#">Scripts</a></li>
             </ul>
             <div>&nbsp;</div>
         </div>
@@ -32,6 +33,8 @@
 <!--SCRIPTS-->
 <script src="/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/vendor/angular/angular.min.js" type="text/javascript"></script>
 <script src="/assets/scripts/document.min.js" type="text/javascript"></script>
+<script src="/assets/scripts/devices.min.js" type="text/javascript"></script>
 </body>
 </html>
