--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -15,8 +15,8 @@
     <div class="main row">
         <div class="mainSub sidebar col-md-2">
             <ul class = "nav">
-                <li id ="start-here"><a id="#">Authentication</a></li>
-                <li id ="devices"><a id="#">Devices & Data</a></li>
+                <li id ="start-here"><a>Authentication</a></li>
+                <li id ="devices"><a>Devices & Data</a></li>
                 <!-- <li id ="create-datasource"><a id="#">Add Data Sources</a></li> -->
                 <!-- <li id ="write-data"><a href="#">Write Data</a></li> -->
                 <li id ="create-script"><a href="#">Scripts</a></li>
