--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -26,8 +26,22 @@
 
         <div class="mainSub textArea col-md-7">
         </div>
+
+        <div class="deviceTest col-offset-2 col-md-7">
+          <h2>Devices & Data</h2>
+
+          <div ng-controller="DeviceController">
+            <h3>Devices in Your Portal</h3>
+            <button ng-click="getDevices()" class="btn btn-warning btn-small">Refresh</button>
+            <ul>
+              <li ng-repeat="device in devices">{{device.name}}</li>
+            </ul>
+          </div>
+          <!-- <script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script> -->
+
+        </div>
     </div>
-</div>
+  </div>
 </div>
 </div>
 <!--SCRIPTS-->
