--- a/server/public/assets/templates/devices.html
+++ b/server/public/assets/templates/devices.html
@@ -1,10 +1,9 @@
 <h2>Devices & Data</h2>
 
 <div ng-controller="DeviceController">
-  <h3>Devices in Your Portal</h3>
-  <button ng-click="getDevices()" class="btn btn-warning btn-small">Refresh</button>
+  <h3>Devices in Your Portal <button ng-click="getDevices()" class="btn btn-warning btn-small">Refresh</button></h3>
   <ul>
-    <li ng-repeat="device in devices">{{device.name}}</li>
+    <li ng-repeat-start="device in devices">{{device.name}}</li>
   </ul>
 </div>
 <!-- <script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script> -->
