--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -15,26 +15,41 @@
     <div class="main row">
         <div class="mainSub sidebar col-md-2">
             <ul class = "nav">
-                <li id ="start-here"><a>Authentication</a></li>
-                <li id ="devices"><a>Devices & Data</a></li>
+                <li id ="start-here"><a href="#authentication">Authentication</a></li>
+                <li id ="devices"><a href="#devices">Devices & Data</a></li>
                 <!-- <li id ="create-datasource"><a id="#">Add Data Sources</a></li> -->
                 <!-- <li id ="write-data"><a href="#">Write Data</a></li> -->
-                <li id ="create-script"><a href="#">Scripts</a></li>
+                <!--<li id ="create-script"><a href="#devices">Scripts</a></li>-->
             </ul>
             <div>&nbsp;</div>
         </div>
 
         <div class="mainSub textArea col-md-7">
+          <a name="authentication"><h2>Authentication</h2></a>
+
+          <p>In order to connect with your device, please provide your portal CIK.<br>
+          <small><em>Can't find your CIK? <a href="https://support.exosite.com/hc/en-us/articles/200095518-How-do-I-find-my-CIK-Client-Interface-Key-" target="_blank">Read this.</a></em></small><p>
+          <h3>Enter your CIK:</h3>
+          <form action="none">
+            <div class="cik">CIK: <input label="cik" type="text" id="cikInput" name="cik" size="43"></input>&nbsp;<a ng-click="getDevices()" class="btn btn-success btn-sm" id="submitCik">Submit CIK</a>
+              <a class="btn btn-danger btn-sm" id="clearCik">Clear CIK</a>
+              <p id="cikStatus"><em>Enter a valid CIK to begin.</em></p></div>
+          </form>
         </div>
 
-        <div class="deviceTest col-offset-2 col-md-7">
-          <h2>Devices & Data</h2>
+        <div id="deviceTest" class="deviceTest col-offset-2 col-md-7" style="display: none;">
+          <a name="devices"><h2>Devices & Data</h2></a>
 
           <div ng-controller="DeviceController">
             <h3>Devices in Your Portal</h3>
             <button ng-click="getDevices()" class="btn btn-warning btn-small">Refresh</button>
             <ul>
-              <li ng-repeat="device in devices">{{device.name}}</li>
+                <li ng-repeat="device in devices">{{device.name}} <small>({{device.type}}, rid: {{device.rid}})</small>
+                  <ul>
+                    <li ng-repeat="child in device.children">{{child.name}} <small>({{child.type}}, rid: {{child.rid}})</small></li>
+                  </ul>
+                </li>
+              </div>
             </ul>
           </div>
           <!-- <script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script> -->
@@ -48,7 +63,8 @@
 <script src="/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/vendor/angular/angular.min.js" type="text/javascript"></script>
-<script src="/assets/scripts/document.min.js" type="text/javascript"></script>
+<script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script>
+<!-- <script src="/assets/scripts/document.min.js" type="text/javascript"></script> -->
 <script src="/assets/scripts/devices.min.js" type="text/javascript"></script>
 </body>
 </html>
