Quick write buttons work after manual call to /rpc/getcik only

--- a/client/styles/stylesheet.css
+++ b/client/styles/stylesheet.css
@@ -20,6 +20,13 @@ a {
 	color: #D5E04D;
 }
 
+.noHover a:hover {
+	text-decoration: none;
+}
+
+.clickable:hover {
+	background-color: #D5E04D;
+}
 
 h1 {
 	color: #41C4DC;
