--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="mainSub textArea col-md-7">
-          <a name="authentication"><h2>Authentication</h2></a>
+          <a class="noHover" name="authentication"><h2>Authentication</h2></a>
 
           <p>In order to connect with your device, please provide your portal CIK.<br>
           <small><em>Can't find your CIK? <a href="https://support.exosite.com/hc/en-us/articles/200095518-How-do-I-find-my-CIK-Client-Interface-Key-" target="_blank">Read this.</a></em></small><p>
@@ -38,15 +38,20 @@
         </div>
 
         <div id="deviceTest" class="deviceTest col-offset-2 col-md-7" style="display: none;">
-          <a name="devices"><h2>Devices & Data</h2></a>
+          <a class="noHover" name="devices"><h2>Devices & Data</h2></a>
 
           <div ng-controller="DeviceController">
             <h3>Devices in Your Portal</h3>
             <button ng-click="getDevices()" class="btn btn-warning btn-small">Refresh</button>
             <ul>
-                <li ng-repeat="device in devices">{{device.name}} <small>({{device.type}}, rid: {{device.rid}})</small>
+                <li  ng-attr-id="{{device.rid}}" ng-repeat="device in devices">{{device.name}}
+                  <span><button class="btn-xs btn-success btn" ng-show="device.type=='dataport'" ng-click="writeToDataport(device.rid, device.rid)">Quick Write</button>
+                  <small>({{device.type}}, rid: {{device.rid}})</small></span>
                   <ul>
-                    <li ng-repeat="child in device.children">{{child.name}} <small>({{child.type}}, rid: {{child.rid}})</small></li>
+                    <li ng-repeat="child in device.children" ng-attr-id="{{child.rid}}" >{{child.name}}
+                      <button class="btn-xs btn-success btn" ng-show="child.type=='dataport'" ng-click="writeToDataport(device.rid, child.rid)">Quick Write</button>
+                      <small>({{child.type}}, rid: {{child.rid}})</small>
+                    </li>
                   </ul>
                 </li>
               </div>
@@ -56,6 +61,7 @@
 
         </div>
     </div>
+
   </div>
 </div>
 </div>
