device cik bug fixed; added write confirm status on resource bullet

--- a/client/styles/stylesheet.css
+++ b/client/styles/stylesheet.css
@@ -64,6 +64,12 @@ h5 {
 	font-style: italic;
 }
 
+.resource-status {
+	color: #4DA74D;
+	font-style: italic;
+	font-size: small;
+}
+
 p {
 	color: #2f2f2f;
 }
