Nonfunctioning but some work towards reorg done

--- a/public/assets/templates/devices.html
+++ b/public/assets/templates/devices.html
@@ -6,4 +6,4 @@
     <li ng-repeat-start="device in devices">{{device.name}}</li>
   </ul>
 </div>
-<!-- <script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script> -->
+<!-- <script src="/assets/js/getstarted.min.js" type="text/javascript"></script> -->
