--- a/public/assets/templates/start.html
+++ b/public/assets/templates/start.html
@@ -19,4 +19,4 @@
 </form>
 <!-- <div id="cik"><h3>Connect to the Portals API (username and password)</h3>
 <em>This will allow you to work with any portal your user has access to, but there may be limitations.</em></div> -->
-<script src="/assets/scripts/getstarted.min.js" type="text/javascript"></script>
+<script src="/assets/js/getstarted.min.js" type="text/javascript"></script>
