--- a/public/views/index-OLD.html
+++ b/public/views/index-OLD.html
@@ -71,7 +71,7 @@
 <!--SCRIPTS-->
 <script src="/vendor/jquery/dist/jquery.min.js" type="text/javascript"></script>
 <script src="/vendor/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="/assets/scripts/document.min.js" type="text/javascript"></script>
+<script src="/assets/js/document.min.js" type="text/javascript"></script>
 </body>
 </html>
 
